kustomize/kasm/overlays/thomelab/kasm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasm
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - kasm
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kasm-proxy
                port:
                  number: 8080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: kasm-api
                port:
                  number: 8080
          - path: /api/share/
            pathType: Prefix
            backend: 
              service:
                name: kasm-share
                port:
                  number: 8182
